[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/separator.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Game.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Paddle.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/right_pallete.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Wall.tscn" type="PackedScene" id=5]

[sub_resource type="Theme" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 199, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 200, 10 )

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="Graphics" type="Node2D" parent="."]

[node name="BackGround" type="ColorRect" parent="Graphics"]
margin_right = 640.0
margin_bottom = 400.0
color = Color( 0.223529, 0.223529, 0.223529, 1 )

[node name="Separator" type="Sprite" parent="Graphics"]
position = Vector2( 320, 200 )
texture = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="Graphics"]
margin_left = 192.0
margin_top = 11.0
margin_right = 447.0
margin_bottom = 29.0
theme = SubResource( 1 )
text = "0 - 0"
align = 1
uppercase = true

[node name="BallContainer" type="Node2D" parent="."]

[node name="BallSpawnLocation" type="Position2D" parent="BallContainer"]
position = Vector2( 320, 200 )

[node name="PaddleContainer" type="Node2D" parent="."]

[node name="LeftPaddle" parent="PaddleContainer" instance=ExtResource( 3 )]
position = Vector2( 30, 200 )

[node name="CollisionShape2D" parent="PaddleContainer/LeftPaddle" index="0"]
position = Vector2( -0.25, 0 )

[node name="RightPaddle" parent="PaddleContainer" instance=ExtResource( 3 )]
position = Vector2( 610, 200 )
paddle_loc = 1

[node name="CollisionShape2D" parent="PaddleContainer/RightPaddle" index="0"]
position = Vector2( -0.5, 0 )

[node name="Sprite" parent="PaddleContainer/RightPaddle" index="1"]
texture = ExtResource( 4 )

[node name="WallContainer" type="Node2D" parent="."]
position = Vector2( 300, 22 )

[node name="Celling" parent="WallContainer" instance=ExtResource( 5 )]
position = Vector2( 20, -32 )
bouncy = true

[node name="Ground" parent="WallContainer" instance=ExtResource( 5 )]
position = Vector2( 20, 388 )
bouncy = true

[node name="LeftWall" parent="WallContainer" instance=ExtResource( 5 )]
position = Vector2( -432, 186 )
rotation = 1.5708

[node name="CollisionShape2D" parent="WallContainer/LeftWall" index="0"]
position = Vector2( -9, -782 )
shape = SubResource( 2 )

[node name="RightWall" parent="WallContainer" instance=ExtResource( 5 )]
position = Vector2( -310, 174 )
rotation = 1.5708

[node name="CollisionShape2D" parent="WallContainer/RightWall" index="0"]
position = Vector2( 4, 0 )
shape = SubResource( 3 )

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="ball_out" from="WallContainer/LeftWall" to="." method="_on_ball_out"]
[connection signal="ball_out" from="WallContainer/RightWall" to="." method="_on_ball_out"]
[connection signal="timeout" from="ResetTimer" to="." method="reset_ball"]

[editable path="PaddleContainer/LeftPaddle"]
[editable path="PaddleContainer/RightPaddle"]
[editable path="WallContainer/LeftWall"]
[editable path="WallContainer/RightWall"]
